ui_builder: migrate demod_options

--- a/src/qtgui/demod_options.ui
+++ b/src/qtgui/demod_options.ui
@@ -17,382 +17,7 @@
    <iconset resource="../../resources/icons.qrc">
     <normaloff>:/icons/icons/signal.svg</normaloff>:/icons/icons/signal.svg</iconset>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QStackedWidget" name="demodOptions">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>72</height>
-      </size>
-     </property>
-     <property name="currentIndex">
-      <number>1</number>
-     </property>
-     <widget class="QWidget" name="demodNoOpt">
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>No options for
-this demodulator</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="demodFmOpt">
-      <layout class="QFormLayout" name="formLayout_3">
-       <item row="0" column="0">
-        <widget class="QLabel" name="maxdevLabel">
-         <property name="text">
-          <string>Max dev</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QComboBox" name="maxdevSelector">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>24</height>
-          </size>
-         </property>
-         <property name="toolTip">
-          <string>Maximum FM deviation</string>
-         </property>
-         <property name="statusTip">
-          <string>Maximum FM deviation</string>
-         </property>
-         <property name="currentIndex">
-          <number>0</number>
-         </property>
-         <item>
-          <property name="text">
-           <string>Voice (2.5 kHz)</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Voice (5 kHz)</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>APT (17 kHz)</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>APT (25 kHz)</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="emphLabel">
-         <property name="text">
-          <string>Tau</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QComboBox" name="emphSelector">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>24</height>
-          </size>
-         </property>
-         <property name="toolTip">
-          <string>Time constant for the FM de-emphasis IIR filter.
-For narrow band FM use 530 μs.
-50 μs and 75 μs are used for broadcast FM depending on region.
-For digital modes it is best to switch it off.</string>
-         </property>
-         <property name="statusTip">
-          <string/>
-         </property>
-         <property name="editable">
-          <bool>false</bool>
-         </property>
-         <property name="currentIndex">
-          <number>3</number>
-         </property>
-         <item>
-          <property name="text">
-           <string>Off</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>25 μs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>50 μs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>75 μs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>100 μs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>250 μs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>530 μs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>1 ms</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QCheckBox" name="subtonefilterfmCheckBox">
-         <property name="toolTip">
-          <string>Enable high-pass subtone filter</string>
-         </property>
-         <property name="text">
-          <string>Subtone filter</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="demodAmOpt">
-      <layout class="QVBoxLayout" name="verticalLayout_3">
-       <item>
-        <widget class="QCheckBox" name="dcrCheckBox">
-         <property name="toolTip">
-          <string>Enable/disable DC removal.</string>
-         </property>
-         <property name="text">
-          <string>DCR</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="demodCWOpt">
-      <layout class="QFormLayout" name="formLayout">
-       <item row="2" column="1">
-        <widget class="QSpinBox" name="cwOffsetSpin">
-         <property name="suffix">
-          <string> Hz</string>
-         </property>
-         <property name="maximum">
-          <number>2000</number>
-         </property>
-         <property name="value">
-          <number>700</number>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>CW offset</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="demodAmSyncOpt">
-      <layout class="QFormLayout" name="formLayout_4">
-       <item row="0" column="0">
-        <widget class="QLabel" name="pllBwLabel">
-         <property name="text">
-          <string>PLL</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QComboBox" name="pllBwSelector">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>24</height>
-          </size>
-         </property>
-         <property name="toolTip">
-          <string>Carrier tracking PLL. Weak, noisy or fading signals may
-benefit from a slower PLL. A slower PLL will take longer
-to react to changes in the carrier frequency however.</string>
-         </property>
-         <property name="statusTip">
-          <string/>
-         </property>
-         <property name="currentIndex">
-          <number>1</number>
-         </property>
-         <item>
-          <property name="text">
-           <string>Fast</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Medium</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Slow</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QCheckBox" name="syncdcrCheckBox">
-         <property name="toolTip">
-          <string>Enable/disable DC removal.</string>
-         </property>
-         <property name="text">
-          <string>DCR</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="demodFmPll">
-      <layout class="QFormLayout" name="formLayout_2">
-       <item row="2" column="1">
-        <widget class="QDoubleSpinBox" name="pllBwSpinBox">
-         <property name="decimals">
-          <number>3</number>
-         </property>
-         <property name="minimum">
-          <double>0.001000000000000</double>
-         </property>
-         <property name="maximum">
-          <double>0.500000000000000</double>
-         </property>
-         <property name="singleStep">
-          <double>0.001000000000000</double>
-         </property>
-         <property name="value">
-          <double>0.100000000000000</double>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="labelBw">
-         <property name="text">
-          <string>PLL BW</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="labelMaxdev">
-         <property name="text">
-          <string>Max dviation</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QDoubleSpinBox" name="maxdevSpinBox">
-         <property name="decimals">
-          <number>1</number>
-         </property>
-         <property name="minimum">
-          <double>100.000000000000000</double>
-         </property>
-         <property name="maximum">
-          <double>25000.000000000000000</double>
-         </property>
-         <property name="singleStep">
-          <double>100.000000000000000</double>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <widget class="QLabel" name="labelDampingFactor">
-         <property name="text">
-          <string>Damping factor</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="1">
-        <widget class="QDoubleSpinBox" name="dampingfactorSpinBox">
-         <property name="minimum">
-          <double>0.010000000000000</double>
-         </property>
-         <property name="maximum">
-          <double>1.000000000000000</double>
-         </property>
-         <property name="singleStep">
-          <double>0.010000000000000</double>
-         </property>
-         <property name="value">
-          <double>0.700000000000000</double>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="1">
-        <widget class="QCheckBox" name="subtonefilterfmpllCheckBox">
-         <property name="toolTip">
-          <string>Enable high-pass subtone filter</string>
-         </property>
-         <property name="text">
-          <string>Subtone filter</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </widget>
-   </item>
-  </layout>
+  <layout class="QGridLayout" name="gridLayout"/>
  </widget>
  <resources>
   <include location="../../resources/icons.qrc"/>
