IQ processing mode: no throttle and audio

--- a/resources/icons.qrc
+++ b/resources/icons.qrc
@@ -24,5 +24,6 @@
     <file>icons/signal.svg</file>
     <file>icons/tangeo-network-idle.svg</file>
     <file>icons/terminal.svg</file>
+    <file>icons/ff.svg</file>
   </qresource>
 </RCC>
